--- a/src/protocol/develop/actions/C2 - Contract Formation.yaml
+++ b/src/protocol/develop/actions/C2 - Contract Formation.yaml
@@ -189,10 +189,10 @@ fields:
     example: true
     notes: ""
 
-  - name: Registers
-    label: Regisers
-    description: "A list of registers that provide approval for all token transfers for all assets under the contract."
-    type: Register[]
+  - name: Oracles
+    label: Oracles
+    description: "A list of oracles that provide approval for all token transfers for all assets under the contract."
+    type: Oracle[]
 
   - name: ContractRevision
     label: Contract Revision
