--- a/src/resources/develop/Rejections.yaml
+++ b/src/resources/develop/Rejections.yaml
@@ -1,6 +1,6 @@
 
 metadata:
-  name: RejectionCodes
+  name: Rejections
   description: "Code/Text combinations returned in rejection messages when a request is not accepted."
   type: RejectionCode
 
