--- a/src/resources/develop/Roles.yaml
+++ b/src/resources/develop/Roles.yaml
@@ -1,7 +1,7 @@
 metadata:
   name: Roles
   description: "Roles that entities play in relation to their interactions with other entities.  These roles have widely-accepted tasks, rights and duties."
-  type: RoleType
+  type: Role
 
 values:
     1:
