--- a/src/resources/develop/Rejections.yaml
+++ b/src/resources/develop/Rejections.yaml
@@ -1,4 +1,3 @@
-
 metadata:
   name: Rejections
   description: "Code/Text combinations returned in rejection messages when a request is not accepted."
@@ -7,196 +6,194 @@ metadata:
 values:
     #################################### Basic ####################################
 
-    0:
-      name: Success
-      text: Success
-      description: No failure. This code should not be used in a reject message.
+ - code:  0
+    name: Success
+    label: Success
+    description: No failure. This code should not be used in a reject message.
 
-    1:
-      name: MsgMalformed
-      text: Message Malformed
-      description: The OP_RETURN message is malformed. It doesn't pass data validation or something about it isn't according to protocol.
+ - code:  1
+    name: MsgMalformed
+    label: Message Malformed
+    description: The OP_RETURN message is malformed. It doesn't pass data validation or something about it isn't according to protocol.
 
-    2:
-      name: TxMalformed
-      text: Transaction Malformed
-      description: The Bitcoin tx is malformed. Incorrect inputs/outputs or something similar.
+ - code:  2
+    name: TxMalformed
+    label: Transaction Malformed
+    description: The Bitcoin tx is malformed. Incorrect inputs/outputs or something similar.
 
-    3:
-      name: Timeout
-      text: Time Out
-      description: A dependency, other contract/service, has failed to complete before the smart contract's timeout.
-
+ - code:  3
+    name: Timeout
+    label: Time Out
+    description: A dependency, other contract/service, has failed to complete before the smart contract's timeout.
 
     #################################### Contract ####################################
 
-    10:
-      name: ContractExists
-      text: Contract Already Exists
-      description: The contract already exists and can't be recreated.
+  - code: 10
+    name: ContractExists
+    label: Contract Already Exists
+    description: The contract already exists and can't be recreated.
 
-    11:
-      name: ContractNotDynamic
-      text: Contract Is Not Dynamic
-      description: 'Sent when a CO is received, but the contract type is not "D" (Dynamic)'
+  - code: 11
+    name: ContractNotDynamic
+    label: Contract Is Not Dynamic
+    description: 'Sent when a CO is received, but the contract type is not "D" (Dynamic)'
 
-    12:
-      name: ContractAssetQtyReduction
-      text: Contract Asset Quantity Reduction
-      description: Sent when a CA tries to reduce the number of assets below the number of assets the contract has.
+  - code: 12
+    name: ContractAssetQtyReduction
+    label: Contract Asset Quantity Reduction
+    description: Sent when a CA tries to reduce the number of assets below the number of assets the contract has.
 
-    13:
-      name: ContractFixedQuantity
-      text: Contract Fixed Quantity
-      description: Sent when the issuer attempted to increase the quantity of assets in a contract beyond the fixed quantity permitted.
+  - code: 13
+    name: ContractFixedQuantity
+    label: Contract Fixed Quantity
+    description: Sent when the issuer attempted to increase the quantity of assets in a contract beyond the fixed quantity permitted.
 
-    14:
-      name: ContractAuthFlags
-      text: Contract Auth Flags Prohibit
-      description: The contract auth flags don't permit the action requested.
+  - code: 14
+    name: ContractAuthFlags
+    label: Contract Auth Flags Prohibit
+    description: The contract auth flags don't permit the action requested.
 
-    15:
-      name: ContractExpired
-      text: Contract Expired
-      description: The contract is expired so can no longer accept requests.
+  - code: 15
+    name: ContractExpired
+    label: Contract Expired
+    description: The contract is expired so can no longer accept requests.
 
-    16:
-      name: ContractFrozen
-      text: Contract Frozen
-      description: The contract is frozen and the request is not permitted while frozen.
+  - code: 16
+    name: ContractFrozen
+    label: Contract Frozen
+    description: The contract is frozen and the request is not permitted while frozen.
 
-    17:
-      name: ContractRevision
-      text: Contract Revision Incorrect
-      description: The revision in a contract amendment is incorrect.
+  - code: 17
+    name: ContractRevision
+    label: Contract Revision Incorrect
+    description: The revision in a contract amendment is incorrect.
 
-    18:
-      name: ContractNotPermitted
-      text: Contract Not Permitted
-      description: Action not permitted by contract.
+  - code: 18
+    name: ContractNotPermitted
+    label: Contract Not Permitted
+    description: Action not permitted by contract.
 
-    #################################### Asset ####################################
+  #################################### Asset ####################################
 
-    20:
-      name: AssetCodeExists
-      text: Asset Code Already Exists
-      description: The asset code specified already exists and can't be reused.
+  - code: 20
+    name: AssetCodeExists
+    label: Asset Code Already Exists
+    description: The asset code specified already exists and can't be reused.
 
-    21:
-      name: AssetNotFound
-      text: Asset Not Found
-      description: The asset code is not found.
+  - code: 21
+    name: AssetNotFound
+    label: Asset Not Found
+    description: The asset code is not found.
 
-    22:
-      name: AssetAuthFlags
-      text: Asset Auth Flags Prohibit
-      description: The asset auth flags don't permit the action requested.
+  - code: 22
+    name: AssetAuthFlags
+    label: Asset Auth Flags Prohibit
+    description: The asset auth flags don't permit the action requested.
 
-    23:
-      name: AssetFrozen
-      text: Asset Frozen
-      description: The asset is frozen and the request is not permitted while frozen.
+  - code: 23
+    name: AssetFrozen
+    label: Asset Frozen
+    description: The asset is frozen and the request is not permitted while frozen.
 
-    24:
-      name: AssetRevision
-      text: Asset Revision Incorrect
-      description: The revision in an asset amendment is incorrect.
+  - code: 24
+    name: AssetRevision
+    label: Asset Revision Incorrect
+    description: The revision in an asset amendment is incorrect.
 
-    25:
-      name: AssetNotPermitted
-      text: Asset Not Permitted
-      description: Action not permitted by asset.
+  - code: 25
+    name: AssetNotPermitted
+    label: Asset Not Permitted
+    description: Action not permitted by asset.
 
     #################################### Transfer ####################################
 
-    30:
-      name: TransferSelf
-      text: Transfer To Self Prohibited
-      description: Transfers with the sender and receiver addresses the same are not permitted.
+  - code: 30
+    name: TransferSelf
+    label: Transfer To Self Prohibited
+    description: Transfers with the sender and receiver addresses the same are not permitted.
 
-    31:
-      name: TransferExpired
-      text: Transfer Expired
-      description: The transfer has expired.
+  - code: 31
+    name: TransferExpired
+    label: Transfer Expired
+    description: The transfer has expired.
 
-    32:
-      name: HoldingsFrozen
-      text: Holdings Frozen
-      description: Holdings are frozen, so the request can't be completed.
+  - code: 32
+    name: HoldingsFrozen
+    label: Holdings Frozen
+    description: Holdings are frozen, so the request can't be completed.
 
     #################################### Governance ####################################
 
-    40:
-      name: HolderProposalProhibited
-      text: Holder Proposal Prohibited
-      description: Holders are not permitted to make proposals.
+  - code: 40
+    name: HolderProposalProhibited
+    label: Holder Proposal Prohibited
+    description: Holders are not permitted to make proposals.
 
-    41:
-      name: ProposalConflicts
-      text: Proposal Conflicts
-      description: The proposal conflicts with an unapplied proposal.
+  - code: 41
+    name: ProposalConflicts
+    label: Proposal Conflicts
+    description: The proposal conflicts with an unapplied proposal.
 
-    42:
-      name: VoteNotFound
-      text: Vote Not Found
-      description: The vote ID referenced is not found.
+  - code: 42
+    name: VoteNotFound
+    label: Vote Not Found
+    description: The vote ID referenced is not found.
 
-    43:
-      name: VoteClosed
-      text: Vote Closed
-      description: The vote has closed and ballots are no longer permitted.
+  - code: 43
+    name: VoteClosed
+    label: Vote Closed
+    description: The vote has closed and ballots are no longer permitted.
 
-    44:
-      name: BallotAlreadyCounted
-      text: Ballot Already Counted
-      description: The ballot has already been counted for this address.
+  - code: 44
+    name: BallotAlreadyCounted
+    label: Ballot Already Counted
+    description: The ballot has already been counted for this address.
 
-    45:
-      name: VoteSystemNotPermitted
-      text: Vote System Not Permitted
-      description: "The voting system isn't permitted for this request."
+  - code: 45
+    name: VoteSystemNotPermitted
+    label: Vote System Not Permitted
+    description: "The voting system isn't permitted for this request."
 
     #################################### Enforcement ####################################
 
-    #50:
 
     #################################### Funding ####################################
 
-    60:
-      name: InsufficientTxFeeFunding
-      text: Insufficient Transaction Fee Funding
-      description: Insufficient bitcoin quantities for response transaction fees.
+  - code: 60
+    name: InsufficientTxFeeFunding
+    label: Insufficient Transaction Fee Funding
+    description: Insufficient bitcoin quantities for response transaction fees.
 
-    61:
-      name: InsufficientValue
-      text: Insufficient Value
-      description: Insufficient bitcoin quantity in inputs to fund request.
+  - code: 61
+    name: InsufficientValue
+    label: Insufficient Value
+    description: Insufficient bitcoin quantity in inputs to fund request.
 
-    62:
-      name: InsufficientQuantity
-      text: Insufficient Quantity
-      description: Insufficient token holdings to for request.
+  - code: 62
+    name: InsufficientQuantity
+    label: Insufficient Quantity
+    description: Insufficient token holdings to for request.
 
     #################################### Address ####################################
 
-    70:
-      name: NotIssuer
-      text: Requestor Is Not Issuer
-      description: The requestor is not the issuer and is required to be for this request.
+  - code: 70
+    name: NotIssuer
+    label: Requestor Is Not Issuer
+    description: The requestor is not the issuer and is required to be for this request.
 
-    71:
-      name: NotOperator
-      text: Requestor Is Not Operator
-      description: The requestor is not the operator and is required to be for this request.
+  - code: 71
+    name: NotOperator
+    label: Requestor Is Not Operator
+    description: The requestor is not the operator and is required to be for this request.
 
-    72:
-      name: UnauthorizedAddress
-      text: Unauthorized Address
-      description: The address specified is not permitted for this request.
+  - code: 72
+    name: UnauthorizedAddress
+    label: Unauthorized Address
+    description: The address specified is not permitted for this request.
 
     #################################### Signatures ####################################
 
-    80:
-      name: InvalidSignature
-      text: Invalid Signature
-      description: The signature provided is not valid. This is for signatures included within OP_RETURN data. Not bitcoin transaction signature scripts.
+  - code: 80
+    name: InvalidSignature
+    label: Invalid Signature
+    description: The signature provided is not valid. This is for signatures included within OP_RETURN data. Not bitcoin transaction signature scripts.
