--- a/src/protocol/develop/actions/E1 - Order.yaml
+++ b/src/protocol/develop/actions/E1 - Order.yaml
@@ -10,7 +10,8 @@ code: E1
 metadata:
   name: Order
   label: Order
-  description: "Issuer to signal to the smart contract that the tokens that a particular public address(es) owns are to be confiscated, frozen, thawed or reconciled."
+  description: >
+    Used by the issuer to signal to the smart contract that the tokens that a particular public address(es) owns are to be confiscated, frozen, thawed or reconciled.
   validation: AssetCreation
   rejection: Rejection
 
