--- a/src/protocol/develop/actions/E2 - Freeze.yaml
+++ b/src/protocol/develop/actions/E2 - Freeze.yaml
@@ -7,7 +7,12 @@ code: E2
 metadata:
   name: Freeze
   label: Freeze
-  description: "To be used to comply with contractual/legal/issuer requirements.  The target public address(es) will be marked as frozen.  However the Freeze action publishes this fact to the public blockchain for transparency. The Contract will not respond to any actions requested by the frozen address."
+  description: >
+    The contract responding to an Order action to freeze assets.
+    To be used to comply with contractual/legal/issuer requirements.
+    The target public address(es) will be marked as frozen.
+    However the Freeze action publishes this fact to the public blockchain for transparency.
+    The Contract will not respond to any actions requested by the frozen address.
   validation: AssetCreation
   rejection: Rejection
 
