--- a/src/protocol/develop/actions/A1 - Asset Definition.yaml
+++ b/src/protocol/develop/actions/A1 - Asset Definition.yaml
@@ -8,9 +8,9 @@ metadata:
   name: AssetDefinition
   label: Asset Definition
   description: >
-    This action is used by the issuer to define the properties/characteristics of the Asset (token) that it wants to create.
+    This action is used by the issuer to define the properties/characteristics of the asset (token) that it wants to create.
     An asset has a unique identifier called AssetID = AssetType + base58(AssetCode + checksum).
-    An asset is always linked to a Contract that is identified by the public address of the Contract wallet.
+    An asset is always linked to a contract that is identified by the public address of the Contract wallet.
   validation: AssetCreation
   rejection: Rejection
 
@@ -88,7 +88,7 @@ fields:
 
   - name: IssuerProposal
     label: Issuer Proposal
-    description: "Set to true if an Issuer is permitted to make proposals outside of the smart contract scope."
+    description: "Set to true if an issuer is permitted to make proposals outside of the smart contract scope."
     type: bool
     example_hex: 01
     example: true
@@ -124,7 +124,7 @@ fields:
 
   - name: AssetPayload
     label: Asset Payload
-    description: "A custom payload that contains meta data about this asset. Payload structure and length is dependent on the asset type chosen. See Asset documentation for more details."
+    description: "A custom payload that contains meta data about this asset. Payload structure and length is dependent on the asset type chosen. See asset documentation for more details."
     type: varbin
     # varbin size is number of bits to serialize the size of the data
     size: 16
