Update A3 - Asset Modification.yaml

--- a/src/protocol/develop/actions/A3 - Asset Modification.yaml
+++ b/src/protocol/develop/actions/A3 - Asset Modification.yaml
@@ -1,5 +1,5 @@
 #
-# Asset Modification Action: Token Dilutions, Call Backs/Revocations, burning etc.
+# Asset Modification Action: Token Dilutions, Call Backs/Revocations, Burning, Trade Restrictions, etc.
 #
 
 code: A3
