--- a/src/protocol/develop/actions/C1 - Contract Offer.yaml
+++ b/src/protocol/develop/actions/C1 - Contract Offer.yaml
@@ -155,7 +155,7 @@ fields:
 
   - name: ContractAuthFlags
     label: Contract Authorization Flags
-    description: "A set of switches that define the authorization rules for this contract. See the Authorization Flags documentation for more detail. Other terms and conditions that are out of the smart contract's control should be listed in the Contract File."
+    description: "A set of switches that define the authorization rules for this contract. See the Authorization Flags documentation for more detail. Other terms and conditions that are out of the smart contract's control should be listed in the Body of Agreement."
     type: varbin
     size: 16
     notes: "Contract Flags - Amendments can be restricted to a vote.  Specified in the Voting System."
