--- a/src/protocol/develop/actions/C4 - Static Contract Formation.yaml
+++ b/src/protocol/develop/actions/C4 - Static Contract Formation.yaml
@@ -22,7 +22,7 @@ fields:
     description: >
         Can be any unique identifying string, including human readable names for branding/vanity purposes.
         Contract identifier (instance) is the bitcoin public address.
-        If the Public Address is lost, then the issuer will have to reissue the entire contract, Asset definition and tokens with the new public address.
+        If the public address is lost, then the issuer will have to reissue the entire contract, Asset Definition and tokens with the new public address.
         Smart contracts can be branded and specialized to suit any terms and conditions.
     type: varchar
     # varchar size is number of bits to serialize the size of the value
@@ -95,7 +95,7 @@ fields:
 
   - name: GoverningLaw
     label: Governing Law
-    description: "5 Letter Code to Identify which governing law the contract will adhere to.  Disputes are to be settled by this law in the jurisdiction specified below. Private dispute resolution organizations can be used as well.  A custom code just needs to be defined."
+    description: "5 Letter Code to identify which governing law the contract will adhere to.  Disputes are to be settled by this law in the jurisdiction specified below. Private dispute resolution organizations can be used as well.  A custom code just needs to be defined."
     type: fixedchar
     size: 5
     example_hex: 5553410000
@@ -125,7 +125,7 @@ fields:
 
   - name: ContractURI
     label: Contract URI
-    description: "Length 0-255 bytes. Points to an information page that also has a copy of the Contract.  Anyone can go to the website to have a look at the price/token, information about the Issuer (company), information about the Asset, legal information, etc.  There will also be a way for Token Owners to vote on this page and contact details with the Issuer/tokenized companies. Could be a IPv6/IPv4, an IPFS address (hash) or txn-id for on chain information or even a public address (DNS)."
+    description: "Length 0-255 bytes. Points to an information page that also has a copy of the Contract.  Anyone can go to the website to have a look at the price/token, information about the issuer (company), information about the Asset, legal information, etc.  There will also be a way for token owners to vote on this page and contact details with the issuer/tokenized companies. Could be a IPv6/IPv4, or txn-id for on chain information or even a public address (DNS)."
     type: varchar
     # varchar size is number of bits to serialize the size of the value
     size: 8
