Update E2 - Freeze.yaml

--- a/src/protocol/develop/actions/E2 - Freeze.yaml
+++ b/src/protocol/develop/actions/E2 - Freeze.yaml
@@ -12,7 +12,7 @@ metadata:
     To be used to comply with contractual/legal/issuer requirements.
     The target public address(es) will be marked as frozen.
     However the Freeze action publishes this fact to the public blockchain for transparency.
-    The Contract will not respond to any actions requested by the frozen address.
+    The contract will not respond to any actions requested by the frozen address.
   validation: AssetCreation
   rejection: Rejection
 
