--- a/src/protocol/develop/types/Manager.yaml
+++ b/src/protocol/develop/types/Manager.yaml
@@ -10,11 +10,11 @@ fields:
     type: Role
     example_hex: 35
     example: "5"
-    notes: "5 - CEO"
+    notes: ""
 
   - name: Name
     label: Manager Name
-    description: "Length 0-255 bytes. 0 is valid. Name (eg. John Alexander Smith)"
+    description: "Length 0-255 bytes. 0 is valid."
     type: varchar
     # varchar size is number of bits to serialize the size of the value
     size: 8
