--- a/src/protocol/develop/actions/C1 - Contract Offer.yaml
+++ b/src/protocol/develop/actions/C1 - Contract Offer.yaml
@@ -19,7 +19,7 @@ rules:
       comments: "The smart contract sets the issuer public address with whatever public address is in Index 0 of the first valid Contract Offer.  From then on, the SC will only respond to 'commands' (request actions) from this address with respect to actions that are issuer controlled according to the protocol."
 
     - name: ContractOperator
-      label: "Contract Operator's Public Address (Optional)"
+      label: "Contract Operator's Public Address (Optional). Can also be used as a cold storage backup for the issuer.  This is important if the issuer wants to be able to change their address as changes to the issuer or operator pkh in an amendment require signatures from both the issuer and the operator pkhs."
       comments: "The one exception to the rule above.  The Contract Operator can nominate a secondary controlling public address that can act on behalf of the issuer for issuer related requests. Typically this will be the Smart Contract Operator. (Optional)"
 
   outputs:
