--- a/src/resources/develop/Rejections.yaml
+++ b/src/resources/develop/Rejections.yaml
@@ -73,6 +73,11 @@ values:
     label: Contract Not Permitted
     description: Action not permitted by contract.
 
+  - code: 19
+    name: ContractBothOperatorsRequired
+    label: Contract BothOperatorsRequired
+    description: Both operators signatures are required to perform this action.
+
 #################################### Asset ####################################
 
   - code: 20
